--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
     <div class="container">
         <form action="" method="post">
-            <input type="text" name="secret" placeholder="Secret to share one time" required autofocus>
+            <input 
+                type="text" 
+                name="secret" 
+                placeholder="Secret to share one time" 
+                required 
+                autofocus
+            />
             <button type="submit">
                 Keep secret
             </button>
@@ -60,7 +66,5 @@
             }
         }
     </style>
-
-    <!-- version 1.2 -->
 </body>
 </html>
