--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         html,
         body {
             padding:0; margin:0; width:100%; height:100%;
+            background: white; color: black;
         }
         * {
             font-size:1.5rem; box-sizing:border-box;
@@ -63,6 +64,11 @@
         @media(max-width:799px) {
             .container {
                 justify-content:center; flex-direction:column;
+            }
+        }
+        @media(prefers-color-scheme:dark) {
+            body {
+                filter: invert(100%);
             }
         }
     </style>
