--- a/index.html
+++ b/index.html
@@ -7,24 +7,97 @@
 </head>
 <body>
     <div class="container">
-        <form action="" method="post">
-            <input 
-                type="text" 
-                name="secret" 
-                placeholder="Secret to share one time" 
-                required 
-                autofocus
-            />
-            <button type="submit">
-                Keep secret
-            </button>
-        </form>
+        {{ if .ShareURL }}
+
+            <div class="box">
+                <textarea id="share_url" rows="4" readonly>{{ .ShareURL }}</textarea>
+                <p class="center">Copy the URL and share it</p>
+                <p class="center">
+                    <a href="?">
+                        Create another
+                    </a>
+                </p>
+            </div>
+            <script>
+                let share_url = document.getElementById('share_url');
+                share_url.select();
+                share_url.onclick = (function(){ this.select() });
+            </script>
+
+        {{ else if .SecretKey }}
+
+            <div class="box center">
+                <div id="secret_content">
+                    <p>
+                        When you click the button, the secret will be shown only once, and then
+                        deleted forever.
+                    </p>
+                    <button onclick="showSecret('{{ .SecretKey }}')">
+                        Show secret
+                    </button>
+
+                    <script>
+                        function showSecret(key) {
+                            let content = document.getElementById('secret_content');
+                            content.innerHTML = 'Loading...';
+                            fetch('?get_secret=' + key)
+                                .then(content => content.json())
+                                .then(data => {
+                                    if(data.secret && data.secret.length) {
+                                        content.innerHTML = data.secret;
+                                        document.getElementById('create_another').removeAttribute('style');
+                                    } else {
+                                        content.innerHTML = 'Something went wrong';
+                                        content.classList.add('error');
+                                    }
+                                })
+                                .catch(error => {
+                                    content.innerHTML = 'Something went wrong';
+                                    content.classList.add('error');
+                                    console.error(error);
+                                });
+                        }
+                    </script>
+                </div>
+
+                <p class="center" id="create_another" style="display:none">
+                    <a href="?">
+                        Create new secret
+                    </a>
+                </p>
+            </div>
+
+        {{ else if .ErrorMsg }}
+
+            <div class="box error center">
+                <p>{{ .ErrorMsg }}</p>
+                <p>:-(</p>
+            </div>
+
+        {{ else }}
+
+            <form action="" method="post">
+                <input
+                    type="text"
+                    name="secret"
+                    placeholder="Secret to share one time"
+                    required
+                    autofocus
+                />
+                <button type="submit">
+                    Keep secret
+                </button>
+            </form>
+
+        {{ end }}
     </div>
 
     <style>
         html,
         body {
             padding:0; margin:0; width:100%; height:100%;
+        }
+        body {
             background: white; color: black;
         }
         * {
@@ -68,7 +141,8 @@
         }
         @media(prefers-color-scheme:dark) {
             body {
-                filter: invert(100%);
+                background: #111;
+                color: white;
             }
         }
     </style>
