--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
                         function showSecret(key) {
                             let content = document.getElementById('secret_content');
                             content.innerHTML = 'Loading...';
-                            fetch('?get_secret=' + key)
+
+                            let data = new FormData();
+                            data.append('key', key);
+                            fetch('/secret', {
+                                method: 'POST',
+                                body: data,
+                                'Content-type': 'application/x-www-form-urlencoded',
+                            })
                                 .then(content => content.json())
                                 .then(data => {
                                     if(data.secret && data.secret.length) {
@@ -61,7 +68,7 @@
                 </div>
 
                 <p class="center" id="create_another" style="display:none">
-                    <a href="?">
+                    <a href="/">
                         Create new secret
                     </a>
                 </p>
@@ -71,7 +78,6 @@
 
             <div class="box error center">
                 <p>{{ .ErrorMsg }}</p>
-                <p>:-(</p>
             </div>
 
         {{ else }}
@@ -121,7 +127,8 @@
             text-align:center;
         }
         .error {
-            color:maroon;
+            background-color:maroon;
+            color: white;
         }
         .box {
             padding:1rem; width:100%; max-width:650px;
