Fix link to Create another

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <textarea id="share_url" rows="4" readonly>{{ .ShareURL }}</textarea>
                 <p class="center">Copy the URL and share it</p>
                 <p class="center">
-                    <a href="?">
+                    <a href="/">
                         Create another
                     </a>
                 </p>
